--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "author": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1692.0"
   }
 }
