--- a/static/blog/hugo.yaml
+++ b/static/blog/hugo.yaml
@@ -1,7 +1,7 @@
 languageCode: "en-us"
 title: "Bit Depth Diary"
 ignoreLogs: ["warning-goldmark-raw-html"]
-baseURL: "/blog/"
+baseURL: "/"
 theme: "PaperMod"
 enableInlineShortcodes: true
 enableRobotsTXT: true
@@ -10,7 +10,7 @@ params:
   ShowCodeCopyButtons: true
   homeInfoParams:
     Title: Hugh Palmer's Blog
-    Content: "![Coding Screen](../../Images/coding-screen-cropped.png)"
+    Content: "![Coding Screen](../Images/coding-screen-cropped.png)"
   socialIcons:
     - name: github
       title: Check out my Github
