--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v6
         with:
-          go-version: "^1.25.0"
+          go-version-file: go.mod
+          cache: true
       - run: go version
 
       - name: Generate
@@ -28,4 +29,5 @@ jobs:
 
       - name: Deploy to FlyIO
         run: fly deploy
-        env: FLY_API_TOKEN=${{ secrets.FLY_API_TOKEN }}
+        env: 
+          FLY_API_TOKEN=${{ secrets.FLY_API_TOKEN }}
